--- a/public/css/superslides.css
+++ b/public/css/superslides.css
@@ -11,7 +11,7 @@
   left: 0;
   overflow-y: auto;
   -webkit-overflow-scrolling: touch;
-  height: 100%;
+  height: 520px;
 }
 #slides .scrollable:after {
   content: "";
